2004-02-27  Jonathan Graehl  <graehl@isi.edu>

	* src/2hash.h: made find_second, add global template functions,
	can use unordered_map (had to fix bugs in it though, and it takes
	36 bytes for an empty table compared to 24 for mine) if you
	#define UNORDERED_MAP in config.h.  My size goes down to 16 if you
	define STATIC_HASHER and STATIC_HASH_EQUAL

2004-02-12  Jonathan Graehl  <graehl@isi.edu>

	* src/finite.cc: finally hunted down problem with post-training
	estimate/normalize in debug mode - total sum is the same, but
	number of nonzero weight arcs is too low.  cause was eachParameter
	being called before normalization to check for NaN; tied groups
	get assigned to the value of whichever arc in that group is
	visited first (ok after normalization, but not before)

	* src/2hash.h: many changes (to all files) moving interface closer
	to proposed STL standard unordered_map - new insert returns
	whether key existed before as well as pointer to the new (or old)
	entry.  ultimately will require a proxy object to use STL hash
	(find_second)

2003-12-12  Jonathan Graehl  <graehl@isi.edu>

	* src/finite.cc: fixed NaN training/normalization problem in debug mode

2003-12-11  Jonathan Graehl  <graehl@isi.edu>

	* src/finite.cc: -! n = random training restarts

2003-11-20  Jonathan Graehl  <graehl@isi.edu>

	* src/finite.cc: -1 = randomly scale weights (of unlocked arcs)
	after composition uniformly by (0..1]

Wed Nov  5 15:46:03 2003  Jonathan Graehl  <graehl@brahms.isi.edu>

	* src/fst.cc: normalization fix for zero-count tied arcs - count
 	their competititors against their group and set them to their
 	teammates' value

2003-10-16  Jonathan Graehl  <graehl@isi.edu>

	* src/wfstio.cc: fixed bug in one-arc per line output of
	zero-weight arcs (showed up with -t)

Mon Oct 13 15:40:05 2003  Jonathan Graehl  <graehl@brahms.isi.edu>

	* src/train.cc: fixed scaling of relative log-likelihood convergence

2003-09-10  Jonathan Graehl  <graehl@isi.edu>
