@@ -4,7 +4,9 @@
 #include <cassert>
 #ifdef DEBUG
 #define Assert(a) assert(a)
+#define Paranoid(a) do { a; } while (0)
 #else
 #define Assert(a)
+#define Paranoid(a)
 #endif
 #endif
